[package]
name = "microchain2"
version = "2.0.0"
authors = ["Albruiz"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
